data/derived/comb/progs/unify/prog6740.ml.out
Characters 413-416:
  | Logx (a)	    -> (log(0))
                        ^^^
Error: This expression has type int but an expression was expected of type
         float
